# StableGLM

./: .gitignore  .pre-commit-config.yaml  MVP_PROGRESS.md  PROJECT_PLAN.md  README.md  REALWORLD_TESTING_SUMMARY.md  REPRODUCIBILITY.md  SESSION_SUMMARY.md  TESTING_REPORT.md  prop.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  docs-pages.yml  docs.yml  wheels.yml
docs/: conf.py  index.md  project_plan.md  reproducibility.md
docs/api/: reference.md  reference.rst
docs/examples/: tutorial.md
docs/guide/: concepts.md  overview.md  quickstart.md
examples/: comprehensive_demo.py  mvp_demo.py  visualize_issues.py
rashomon/: __init__.py  plotting.py  rashomon_set.py
scripts/: download_data.py  extended_realworld_tests.py  fix_all.py  fix_all_indentation.py  fix_docstring_indent.py  fix_indent_2.py  fix_mcr.py  fix_mcr_indent.py  fix_vic_indent.py  generate_docs_images.py  generate_tutorial_breast_cancer.py  generate_tutorial_german_credit.py  generate_tutorial_realworld.py  realworld_tests.py  smoke_run.py  verify_loss_bound.py
scripts/gh/: project_board.ps1  sync.ps1
tests/: test_adult_dataset.py  test_api.py  test_diagnostics.py  test_multiplicity.py  test_smoke.py  test_vic_mcr.py
