[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "rashomon-py"
version = "0.0.0"
description = "Rashomon-GLM: ε-Rashomon sets, certificates, sampling, and set-level metrics for GLMs"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  { name = "StableGLM Team" }
]
keywords = ["rashomon", "glm", "interpretability", "stability", "logistic regression", "sampling"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.22",
  "scipy>=1.10",
  "scikit-learn>=1.2",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "tqdm>=4.65",
]

[project.urls]
Homepage = "https://github.com/fxcawley/StableGLM"
Issues = "https://github.com/fxcawley/StableGLM/issues"

[tool.hatch.build]
packages = ["rashomon"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
  "E", "F", "I", "UP", "B", "PIE", "Q", "W"
]
ignore = ["E501"]
src = ["rashomon", "tests", "scripts"]

[tool.ruff.isort]
known-first-party = ["rashomon"]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
pretty = true
show_error_codes = true